# llm-altruism

./: .env.example  .gitignore  .hidden-items.json  DATA_CARD.md  JOURNAL.md  MODEL_REGISTRY.md  PAPER.md  PAPEROUTLINE.md  PLAN.md  README.md  REPRODUCIBILITY.md  hello_world.py  pyproject.toml
agent/: CATCHUP.md  FINDINGS.md  JOURNAL.md  LITERATURE.md  PAPER.md  PAPEROUTLINE.md  PAPERRESULTS.md  PLAN.md
agents/: __init__.py  agent_0.py  agent_1.py  agent_2.py  agent_config.json  agent_config.py  base_agent.py
analysis/: __init__.py  backfill_metadata.py  build_manifest.py  summarize_results.py  validation.py
docs/: NOTES.md  README.md  llm_altruism_research_proposal.tex  references.bib
experiments/: part_0.py  part_0_config.json  part_0_prompt.json  part_1.py  part_1_prompt.json  part_2.py  preflight.py  prompt_loader.py  result_writer.py  wizard.py
paper/: APPENDIX.md  ARTIFACT_INDEX.md  DRAFT.md  FIGURE_CAPTIONS.md  MANUSCRIPT.md  REFERENCES.md  RESULTS_TABLES.md  SUBMISSION_CHECKLIST.md  references.bib
providers/: __init__.py  api_call.py
scripts/: build_icml_submission.py  clean_workspace.sh  compare_results.py  continue_canonical_ecology_suite.py  ecology_casebook.py  icrn_vscode_tunnel.sh  live_run_status.py  maintain_canonical_ecology_suite.py  paper_figures.py  paper_stats.py  paper_summary.py  pull_ollama_models.py  recover_canonical_ecology_baseline.py  refresh_canonical_ecology_ops_status.py  refresh_live_ecology_packet.py  run_canonical_ecology_suite.py  run_experiment.py  run_paper_batch.py
tests/: test_access.py  test_agent_config.py  test_agents.py  test_analysis_pipeline.py  test_api_call.py  test_build_icml_submission.py  test_ecology_casebook.py  (+25 more)
(+288 files in other folders)
