[project]
name = "llm-altruism"
version = "0.1.0"
description = "Experiments for studying altruism and social behavior in LLM agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.72.0",
    "cerebras-cloud-sdk>=1.50.0",
    "deep-translator>=1.11.4",
    "groq>=0.31.0",
    "ollama>=0.6.0",
    "openai>=2.24.0",
    "openrouter>=0.8.1",
    "pydantic>=2.11.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "xai-sdk>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "experiments", "providers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
